CCA: Fix mode selector scrollbar can't reach start position
Fixed by overriding the derrived display flex rule and set mode selector
to display block.

Bug: b/175849953
Test: Manually with device support portrait mode.
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/2596907
Auto-Submit: Inker Kuo <inker@chromium.org>
Commit-Queue: Inker Kuo <inker@chromium.org>
Cr-Commit-Position: refs/heads/master@{#838060}

--- a/chromeos/components/camera_app_ui/resources/css/main.css
+++ b/chromeos/components/camera_app_ui/resources/css/main.css
@@ -206,6 +206,7 @@ body.tablet-landscape .actions-group {
     rgba(0, 0, 0, 0) 0,
     rgba(0, 0, 0, 1) var(--fade-padding) calc(100% - var(--fade-padding)),
     rgba(0, 0, 0, 0) 100%);
+  display: block;
   left: calc(var(--left-line) * 2);
   overflow: auto;
   padding: 5px 0;
